Added Sala and ReservaSala entities.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -110,6 +110,18 @@
     <script src="app/layouts/error/error.state.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/sala/sala-dialog.controller.js"></script>
+    <script src="app/entities/sala/sala-detail.controller.js"></script>
+    <script src="app/entities/sala/sala-delete-dialog.controller.js"></script>
+    <script src="app/entities/sala/sala.state.js"></script>
+    <script src="app/entities/sala/sala.service.js"></script>
+    <script src="app/entities/sala/sala.controller.js"></script>
+    <script src="app/entities/reserva-sala/reserva-sala-dialog.controller.js"></script>
+    <script src="app/entities/reserva-sala/reserva-sala-detail.controller.js"></script>
+    <script src="app/entities/reserva-sala/reserva-sala-delete-dialog.controller.js"></script>
+    <script src="app/entities/reserva-sala/reserva-sala.state.js"></script>
+    <script src="app/entities/reserva-sala/reserva-sala.service.js"></script>
+    <script src="app/entities/reserva-sala/reserva-sala.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
