--- a/src/main/webapp/app/entities/reserva-sala/reserva-sala-dialog.html
+++ b/src/main/webapp/app/entities/reserva-sala/reserva-sala-dialog.html
@@ -21,23 +21,49 @@
         </div>
         <div class="form-group">
             <label class="control-label" data-translate="reservaSalasApp.reservaSala.fechaHoraInicial" for="field_fechaHoraInicial">Fecha Hora Inicial</label>
-                <div class="input-group">
+                <!--<div class="input-group">
                     <input id="field_fechaHoraInicial" type="text" class="form-control" name="fechaHoraInicial" uib-datepicker-popup="{{dateformat}}" ng-model="vm.reservaSala.fechaHoraInicial" is-open="vm.datePickerOpenStatus.fechaHoraInicial"
-                    />
+                    clear="Limpiar" close-text="Cerrar" current-text="Hoy"/>
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('fechaHoraInicial')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
-                </div>
+                </div>-->
+            <div class="input-group">
+                <input id="field_fechaHoraInicial" name="fechaHoraInicial" type="text"
+                class="form-control" readonly uib-datepicker-popup="{{dateformat}}" ng-model="vm.reservaSala.fechaHoraInicial"
+                is-open="vm.datePickerOpenStatus.fechaHoraInicial" clear-text="Limpiar" close-text="Cerrar" current-text="Hoy"/>
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="vm.openCalendar('fechaHoraInicial')">
+                        <i class="glyphicon glyphicon-calendar"></i>
+                    </button>
+                </span>
+            </div>
+            <div class="" uib-timepicker ng-model="vm.reservaSala.fechaHoraInicial" hour-step="1"
+                minute-step="15" show-meridian="true">
+            </div>
         </div>
         <div class="form-group">
             <label class="control-label" data-translate="reservaSalasApp.reservaSala.fechaHoraFinal" for="field_fechaHoraFinal">Fecha Hora Final</label>
-                <div class="input-group">
+                <!--<div class="input-group">
                     <input id="field_fechaHoraFinal" type="text" class="form-control" name="fechaHoraFinal" uib-datepicker-popup="{{dateformat}}" ng-model="vm.reservaSala.fechaHoraFinal" is-open="vm.datePickerOpenStatus.fechaHoraFinal"
-                    />
+                    clear-text="Limpiar" close-text="Cerrar" current-text="Hoy" />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('fechaHoraFinal')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
-                </div>
+                </div>-->
+            <div class="input-group">
+                <input id="field_fechaHoraFinal" name="fechaHoraFinal" type="text"
+                class="form-control" readonly uib-datepicker-popup="{{dateformat}}" ng-model="vm.reservaSala.fechaHoraFinal"
+                is-open="vm.datePickerOpenStatus.fechaHoraFinal" clear-text="Limpiar" close-text="Cerrar" current-text="Hoy"/>
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-default" ng-click="vm.openCalendar('fechaHoraFinal')">
+                        <i class="glyphicon glyphicon-calendar"></i>
+                    </button>
+                </span>
+            </div>
+            <div class="" uib-timepicker ng-model="vm.reservaSala.fechaHoraFinal" hour-step="1"
+                minute-step="15" show-meridian="true">
+            </div>
         </div>
         <div class="form-group">
             <label class="control-label" data-translate="reservaSalasApp.reservaSala.descripcion" for="field_descripcion">Descripcion</label>
